# climateTrends

./: .gitignore  README.md  preprocessing.py  pyproject.toml  station_test.py
src/climateTrends/: preprocessing.py  services.py  station.py
tests/: preprocessing_test.py  services_test.py  station_test.py
